--- a/.drone.yml
+++ b/.drone.yml
@@ -4,7 +4,7 @@ pipeline:
     image: plugins/ecr
     repo: 518431211874.dkr.ecr.us-east-1.amazonaws.com/aws-summit-2018
     dockerfile: devops/Dockerfile
-    context: Dockerfile
+    context: devops
     tag: ${DRONE_COMMIT}
     volumes: [ '/var/run/docker.sock:/var/run/docker.sock' ]
 
