--- a/devops/Dockerfile
+++ b/devops/Dockerfile
@@ -1,12 +1,2 @@
-FROM python
-
-RUN mkdir /app/
-ADD requirements.txt /app/
-
-WORKDIR /app/
-RUN pip install -r requirements.txt
-
-ADD . /app/
-
-EXPOSE 80
+# implement the rest!
 CMD ["uwsgi","--ini","server.ini"]
