Solucao Guilherme Saijo

--- a/devops/Dockerfile
+++ b/devops/Dockerfile
@@ -1,2 +1,9 @@
 # implement the rest!
+FROM python:2.7
+
+COPY . /app
+WORKDIR /app
+
+RUN pip install -r requirements.txt
+
 CMD ["uwsgi","--ini","server.ini"]
