--- a/devops/Dockerfile
+++ b/devops/Dockerfile
@@ -3,6 +3,9 @@
 FROM python
 MAINTAINER concrete-gesiane
 EXPOSE 80
+COPY . .
+
+RUN pip install -r requirements.txt
 
 CMD ["uwsgi","--ini","server.ini"]
 
