--- a/front/package.json
+++ b/front/package.json
@@ -6,7 +6,8 @@
     "@material-ui/core": "^1.2.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "jquery": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
